--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_TOKEN='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'
+REACT_APP_GITHUB_TOKEN='xxxxx'
 REACT_APP_GITHUB_URL='https://api.github.com'
