--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_TOKEN='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'
+REACT_APP_GITHUB_TOKEN=''
 REACT_APP_GITHUB_URL='https://api.github.com'
